2005-06-27  Jeremy Cribb  <jcribb@email.unc.edu>
	*  get_beadmax: fixed stupid bug.  I really should have tested this first... oy

2005-06-27  Jeremy Cribb  <jcribb@email.unc.edu>
	*  get_beadmax: added.  returns the maximum bead/tracker ID in a tracked-video dataset.

2005-06-23 David Hill <dbhill@email.unc.edu>
	* batch_load_video_tracking.m: fixed bug so that tracking files to not
	* have to start at t = 0

2005-06-22  Kalpit Desai	<kvdesai@cs.unc.edu>
	* load_vrpn_tracking.m: Fixed the calculation of BeadPosition.

2005-06-16  Jeremy Cribb <jcribb@email.unc.edu>
	* video_tracking_constants.m: hid a lot of the constants for the video tracking & analysis code into this script.

2005-06-16  Jeremy Cribb <jcribb@email.unc.edu>
	* load_video_tracking.m: now you can use filemasks to aggregate several video tracks into a single data table.

2005-05-22  Jeremy Cribb <jcribb@email.unc.edu>
	* load_video_tracking.m: added table parameter that allows one to switch between structure and matrix/table output.
	* get_bead.m: now handles either output type.

2005-05-21  Jeremy Cribb <jcribb@email.unc.edu>
	* filter_out_repeats_in_vrpn.m: added.

2005-05-17  Sorrell Massenburg <massenburgs@unc.edu>
	* erase_negatives_in_vrpn.m: added.

2005-05-09	Jeremy Cribb <jcribb@email.unc.edu>
	* load_video_tracking.m: MAJOR CHANGES to output format.  Prior to this version, load_video_tracking outputted a matrix that required all beads to exist for all times; zeros were used as placeholders.  This was changed to reflect Video Spot Tracker's output more truthfully.  Also added support for '.evt.mat' data format.
	* get_bead.m: added.  Extracts a specific bead's data from new load_video_tracking.

2005-04-06	Kalpit Desai	<kvdesai@cs.unc.edu>
	* load_vrpn_tracking.m: 
	- Now compatible with laser tracker 02.13
	- Tells user when swaping vrpn time stamps with separately logged 'even' time stamps.
	* tclip.m: fixed function signature in the documentation.
